<?xml version="1.0"?>
<package>
  <name>tmrrt_exploration</name>
  <version>1.0.0</version>
  <description>A ROS package that uses temporal memory-based exploration strategy to explore unknown area autonomously</description>

  <author>billy</author>
  <maintainer email="billy_lau@sutd.edu.sg">Billy Lau</maintainer>

  <license>MIT</license>
  <url>http://wiki.ros.org/tmrrt_exploration</url>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>message_runtime</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
